# udacity-robotics-project1

./: .gitignore  CMakeLists.txt  README.md
model/house/: model.sdf
model/robot/: model.sdf
model/robot_color/: model.config  model.sdf
script/: plugin.cpp
world/: my_world
